# dashboard

./: .gitignore  ANALYSIS.md  ARCHITECTURE.md  CMakeLists.txt  DEMO_GUI_ANALYSIS.md  DOXYGEN_COMMANDS.md  DOXYGEN_INTEGRATION.md  DOXYGEN_QUICK_START.md  Doxyfile  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_PLAN.md  INTEGRATION_FIX_STATUS.md  LICENSE  METRICS_PANEL_UPDATE.md  PERFORMANCE.md  PHASE_1_COMPLETE.md  PHASE_1_COMPLETE_DEMO_GUI.md  PHASE_2_ARCHITECTURE.md  PHASE_2_FIX_VISUAL.md  PHASE_2_INTEGRATION_FIX.md  PHASE_2_QUICK_REFERENCE.md  PHASE_2_RUNTIME_BEHAVIOR.md  PHASE_3A_CLEANUP_PLAN.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PLANNING_INDEX.md  QUICK_FIX_SUMMARY.md  REFACTORING_COMPLETE.md  TECHNICAL_GAPS.md  graphapp.sh  log4cxx.properties  test_logging.sh
.github/: copilot-instructions.md
cmake/: Coverage.cmake
config/: graph_csv_pipeline_dual_port_integration.json  mock_graph.json
doc/: ANALYSIS_DOCUMENTS_INDEX.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_CONFORMANCE_SUMMARY.md  CODING_STANDARDS_VALIDATION.md  CONFORMANCE_AND_ROADMAP_ANALYSIS.md  DASHBOARD_COMMANDS.md  DEMO_GUI_ANALYSIS.md  DOXYGEN_DOCUMENTATION_COMPLETE.md  DOXYGEN_GUIDE.md  FIXES_QUICK_START.md  GRAPHX_COMPARATIVE_ANALYSIS.md  GRAPHX_COMPARATIVE_ANALYSIS_CORRECTED.md  GRAPHX_COMPARISON_QUICK_REFERENCE.md  GRAPHX_COMPARISON_QUICK_REFERENCE_CORRECTED.md  LAYER_1_TASK_1_1_REPORT.md  LAYER_1_TASK_1_2_REPORT.md  LAYER_1_TASK_1_3_REPORT.md  MESSAGE_POOL_API.md  MESSAGE_POOL_USAGE_GUIDE.md  METRICS_PANEL_UPDATE.md  PHASE_2C_INTEGRATION_TESTS.md  PHASE_2_BENCHMARK_DETAILED_RESULTS.md  PHASE_2_CHECKLIST.md  PHASE_2_COMPLETE.md  PHASE_2_FIX_CHECKLIST.md  PHASE_2_FIX_COMPLETE.md  PHASE_2_PERFORMANCE_REPORT.md  PHASE_3D_COMPLETE.md  (+18 more)
src/: CMakeLists.txt
src/app/: FactoryManager.cpp  GraphBuilder.cpp  SignalHandler.cpp
src/app/policies/: CompletionPolicy.cpp  DataInjectionPolicy.cpp  MetricsPolicy.cpp
src/avionics/: FeedbackParameterComputer.cpp  FlightMonitorNode.cpp  FlightPhaseClassifier.cpp
src/avionics/adapters/: BarometricSensorAdapter.cpp  GPSSensorAdapter.cpp  IMUSensorAdapter.cpp  SensorManager.cpp
src/avionics/estimators/: AdaptiveComplementaryFilter.cpp  AltitudeFusionEstimator.cpp  AngularRateIntegrator.cpp  AttitudeQuaternion.cpp  ConfidenceAggregator.cpp  EKFCore.cpp  MagnetometerIntegrator.cpp  SensorVoter.cpp  VelocityCrossCheck.cpp
src/avionics/nodes/: AltitudeFusionNode.cpp  EstimationPipelineNode.cpp  StateVectorCaptureSinkNode.cpp
src/csv/: CSVDataInjectionManager.cpp  CSVParser.cpp
src/gdashboard/: dashboard_main.cpp
src/graph/: AdaptiveCapacityMonitor.cpp  EdgeRegistry.cpp  ExecutionState.cpp  GraphExecutor.cpp  GraphExecutorBuilder.cpp  JsonView.cpp  NodeFactory.cpp  PooledMessage.cpp  SensorClassification.cpp  StaticNodeAdapter.cpp  ThreadPool.cpp
src/plugins/: PluginInspector.cpp  PluginLoader.cpp  PluginRegistry.cpp
src/ui/: BuiltinCommands.cpp  CommandRegistry.cpp  CommandWindow.cpp  Dashboard.cpp  LayoutConfig.cpp  Log4cxxAppender.cpp  LoggingAppender.cpp  LoggingWindow.cpp  LoggingWindowAppender.cpp  MetricsPanel.cpp  MetricsTilePanel.cpp  MetricsTileWindow.cpp  NodeMetricsTile.cpp  StatusBar.cpp  TabContainer.cpp  Window.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  benchmark_active_queue.cpp  benchmark_message_routing.cpp  benchmark_node_factory.cpp  benchmark_thread_pool.cpp
test/core/: test_active_queue.cpp  test_thread_pool.cpp  test_type_info.cpp
test/data/: accel_test.csv  accelerometer.csv  baro_test.csv  barometer.csv  flight_profile_integration_accel.csv  flight_profile_integration_baro.csv  flight_profile_integration_gps.csv  flight_profile_integration_gyro.csv  flight_profile_integration_mag.csv  gps.csv  gps_test.csv  gyro_test.csv  gyroscope.csv  mag_test.csv  magnetometer.csv  phase7_gps_dropout.csv  phase7_high_altitude.csv  phase7_realistic_ascent.csv  phase7_vertical_ascent.csv
test/data/configs/: test_minimal.json  test_simple.json
test/data/csv_flight_scenarios/: scenario_gps_dropout.csv  scenario_high_g_lateral_maneuver.csv  scenario_spiral_ascent_with_spin.csv  scenario_vertical_ascent_100m.csv
test/data/phase7_scenarios/: scenario_gps_dropout.csv  scenario_high_altitude.csv  scenario_realistic_ascent_apogee.csv  scenario_vertical_ascent_100m.csv
test/data/pipeline_scenarios/: scenario_powered_flight.csv
test/graph/: DynamicNodeTestHelper.hpp  test_adaptive_capacity.cpp  test_capability_bus.cpp  test_command_policy.cpp  test_completion_policy.cpp  test_csv_injection_policy.cpp  test_data_injection_policy.cpp  test_edge_registry.cpp  test_execution_policy_chain.cpp  test_graph_config_parser.cpp  test_graph_manager.cpp  test_json_dynamic_graph_loader.cpp  test_lazy_allocation.cpp  test_message_pool.cpp  test_metrics_policy.cpp  test_mock_graph_executor.cpp  test_node_factory.cpp  test_port_types_message_routing.cpp  test_real_node_integration.cpp  test_thread_pool.cpp
test/graph/nodes/: test_altitude_fusion_node.cpp  test_altitude_fusion_node_dynamic.cpp  test_data_injection_nodes.cpp  test_data_injection_nodes_dynamic.cpp  test_estimation_pipeline_node.cpp  test_estimation_pipeline_node_dynamic.cpp  test_feedback_test_sink_node.cpp  test_feedback_test_sink_node_dynamic.cpp  test_flight_fsm_node.cpp  test_flight_fsm_node_dynamic.cpp  test_flight_monitor_node.cpp  test_flight_monitor_node_dynamic.cpp  test_state_vector_capture_sink_node.cpp  test_state_vector_capture_sink_node_dynamic.cpp
test/integration/: test_adaptive_capacity_integration.cpp  test_csv_pipeline_dual_port_integration.cpp  test_message_move_semantics.cpp  test_message_pool_integration.cpp  test_phase0_metrics_discovery.cpp  test_phase2_end_to_end.cpp  test_phase4_integration.cpp
test/ui/: test_arrow_key_navigation.cpp  test_builtin_commands_integration.cpp  test_command_registry.cpp  test_layout_config.cpp  test_logging_filter_integration.cpp  test_logging_window.cpp  test_metrics_tile_panel.cpp  test_metrics_tile_window.cpp  test_node_metrics_tile.cpp  test_phase1_components.cpp  test_phase3d_commands.cpp  test_tab_container.cpp
(+182 files in other folders)
